[workspace]
members = [
    "crates/benchmark",
    "crates/curp",
    "crates/curp-external-api",
    "crates/curp-test-utils",
    "crates/engine",
    "crates/simulation",
    "crates/test-macros",
    "crates/utils",
    "crates/xline",
    "crates/xline-client",
    "crates/xline-test-utils",
    "crates/xlineapi",
    "crates/xlinectl",
    "workspace-hack",
]
resolver = "2"

# TODO: when cargo-machete support ignore workspace member crate, then add it into pre commit hook & CI
# ISSUE: https://github.com/bnjbvr/cargo-machete/issues/94
[workspace.metadata.cargo-machete]
ignored = ["prost", "workspace-hack"]
