[package]
name = "curp-external-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/curp-external-api"
description = "Curp external API"
license = "Apache-2.0"
readme = "README.md"
categories = ["API"]
keywords = ["API", "Curp"]

[dependencies]
async-trait = "0.1.53"
engine = { path = "../engine" }
mockall = "0.11.3"
prost = "0.11"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "1.0.31"
