[package]
name = "curp-test-utils"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/curp-test-utils"
description = "Test utils for curp"
categories = ["Test"]
keywords = ["Test", "Utils"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
clippy-utilities = "0.2.0"
curp-external-api = { path = "../curp-external-api" }
engine = { path = "../engine" }
itertools = "0.10.3"
madsim = { version = "0.2.22", features = ["rpc", "macros"] }
mockall = "0.11.3"
once_cell = "1.17.0"
parking_lot = "0.12.1"
prost = "0.11"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "1.0.31"
tokio = { version = "0.2.23", package = "madsim-tokio", features = [
  "rt-multi-thread",
] }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
