[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition = "2021"
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/datenlord/Xline/curp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
futures = "0.3.21"
madsim = {version = "0.2.0-alpha.3", features = ["rpc", "logger", "macros"]}
parking_lot = "0.12.1"
serde = {version = "1.0.130", features = ["derive"]}
thiserror = "1.0.31"
tokio = {version = "1.19.0", features = ["rt-multi-thread"]}
tracing = "0.1.34"

[dev-dependencies]
itertools = "0.10.3"
