[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition = "2021"
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/datenlord/Xline/tree/master/curp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
clippy-utilities = "0.2.0"
event-listener = "2.5.2"
futures = "0.3.21"
itertools = "0.10.3"
lock_utils = { path = "../lock_utils", version = "0.1.0", features = [
    "parking_lot",
] }
madsim = { version = "0.2.0-alpha.3", features = ["rpc", "logger", "macros"] }
opentelemetry = "0.18.0"
parking_lot = "0.12.1"
prost = "0.10.3"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.7.2"
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
tracing-opentelemetry = "0.18.0"
flume = "0.10.14"
indexmap = "1.9.2"

[dev-dependencies]
itertools = "0.10.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.3"
tower = { version = "0.4.13", features = ["filter"] }
anyhow = "1.0.66"
mockall = "0.11.3"

[build-dependencies]
tonic-build = "0.7.2"
