[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Algorithms"]
description = "Curp consensus protocol"
edition = "2021"
keywords = ["consensus", "distributed"]
license = "Apache-2.0"
name = "curp"
readme = "README.md"
repository = "https://github.com/datenlord/Xline/tree/master/curp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
clippy-utilities = "0.2.0"
event-listener = "2.5.2"
futures = "0.3.21"
itertools = "0.10.3"
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
curp-external-api = { path = "../curp-external-api" }
madsim = { version = "0.2", features = ["rpc", "macros"] }
opentelemetry = "0.18.0"
parking_lot = "0.12.1"
prost = "0.11"
serde = { version = "1.0.130", features = ["derive", "rc"] }
thiserror = "1.0.31"
tokio = { version = "0.2", package = "madsim-tokio", features = [
  "rt-multi-thread",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad", features = [
  "net",
] }
tonic = { version = "0.2", package = "madsim-tonic" }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
tracing-opentelemetry = "0.18.0"
flume = "0.10.14"
indexmap = "1.9.2"
tower = { version = "0.4.13", features = ["filter"] }
engine = { path = "../engine" }
async-stream = "0.3.4"
chrono = { version = "0.4.24", default-features = false, features = [
  "clock",
  "std",
] }
uuid = { version = "1.3.1", features = ["v4"] }
bytes = "1.4.0"

[dev-dependencies]
curp-test-utils = { path = "../curp-test-utils" }
itertools = "0.10.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing-test = "0.2.4"
anyhow = "1.0.66"
mockall = "0.11.3"
once_cell = "1.17.0"
tempfile = "3"

[build-dependencies]
tonic-build = { version = "0.2", package = "madsim-tonic-build" }
prost-build = "0.11"
