[package]
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline Persistent Layer "
categories = ["Storage Engine"]
keywords = ["storage engine"]
license = "Apache-2.0"
repository = "https://github.com/datenlord/Xline/tree/master/storage"
readme = "../README.md"
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
clippy-utilities = "0.2.0"
