[package]
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline Persistent Layer "
categories = ["Storage Engine"]
keywords = ["storage engine"]
license = "Apache-2.0"
repository = "https://github.com/datenlord/Xline/tree/master/storage"
readme = "../README.md"
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
clippy-utilities = "0.2.0"
async-trait = "0.1.67"
tokio = { version = "0.2", package = "madsim-tokio", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "io-util",
] }
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["io"] }
