[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/datenlord/Xline/tree/master/tests/simulation"
description = "Madsim simulation for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Test"]
keywords = ["Test", "Deterministic Simulation"]

[dependencies]
curp = { path = "../curp" }
curp-test-utils = { path = "../curp-test-utils" }
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
engine = { path = "../engine" }
thiserror = "1.0.31"
async-trait = "0.1.53"
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "sync",
  "macros",
  "time",
  "signal",
] }
tonic = { version = "0.2", package = "madsim-tonic" }
prost = "0.11"
futures = "0.3.21"
clippy-utilities = "0.2.0"
itertools = "0.10.3"
once_cell = "1.17.0"
parking_lot = "0.12.1"
serde = { version = "1.0.130", features = ["derive", "rc"] }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
bincode = "1.3.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }

[build-dependencies]
tonic-build = { version = "0.2", package = "madsim-tonic-build" }
