[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/tests/simulation"
description = "Madsim simulation for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Test"]
keywords = ["Test", "Deterministic Simulation"]

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
curp = { path = "../curp" }
curp-test-utils = { path = "../curp-test-utils" }
engine = { path = "../engine" }
itertools = "0.12.0"
madsim = "0.2.22"
parking_lot = "0.12.1"
prost = "0.11"
tempfile = "3"
tokio = { version = "0.2.23", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
    "time",
    "signal",
] }
tonic = { version = "0.3.0", package = "madsim-tonic" }
tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
tonic-build = { version = "0.3.0", package = "madsim-tonic-build" }
