[package]
name = "utils"
version = "0.1.0"
authors = ["DatenLord Developers <dev@datenlord.io>"]
edition = "2021"
description = "Utilities funtions for Xline"
repository = "https://github.com/datenlord/Xline/tree/master/utils"
readme = "README.md"
license = "MIT"
keywords = ["utilities"]
categories = ["utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["std", "tokio", "parking_lot"]
std = []
tokio = ["dep:tokio", "dep:async-trait"]
parking_lot = ["dep:parking_lot"]

[dependencies]
parking_lot = { version = "0.12.1", optional = true }
tokio = { version = "1.23.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
], optional = true }
async-trait = { version = "0.1.60", optional = true }
tonic = "0.7.2"
opentelemetry = "0.18.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"

[dev-dependencies]
opentelemetry-jaeger = "0.17.0"
tracing-subscriber = "0.3.16"
