[package]
name = "xline"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Distributed KV storage for metadata"
repository = "https://github.com/datenlord/Xline"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["KV", "consistency", "metadata"]
categories = ["KV"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
clap = { version = "4.0.32", features = ["derive"] }
clippy-utilities = "0.1.0"
curp = { path = "../curp", version = "0.1.0" }
env_logger = "0.9.3"
etcd-client = "0.10.1"
jsonwebtoken = "8.1.1"
itertools = "0.10.3"
lock_utils = { path = "../lock_utils", version = "0.1.0", features = [
    "parking_lot",
] }
log = "0.4.17"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-contrib = { version = "0.10.0", features = [
    "jaeger_json_exporter",
    "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
pbkdf2 = { version = "0.11.0", features = ["std"] }
prost = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.7.2"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }


[build-dependencies]
tonic-build = "0.7.2"
