[package]
name = "xline"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Distributed KV storage for metadata"
repository = "https://github.com/datenlord/Xline"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["KV", "consistency", "metadata"]
categories = ["KV"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
clap = { version = "3.2.16", features = ["derive"] }
clippy-utilities = "0.1.0"
curp = { path = "../curp", version = "0.1.0" }
etcd-client = { version = "0.2", package = "madsim-etcd-client" }
event-listener = "2.5.2"
jsonwebtoken = "8.1.1"
itertools = "0.10.3"
utils = { path = "../utils", features = ["parking_lot"] }
engine = { path = "../engine" }
xlineapi = { path = "../xlineapi" }
log = "0.4.17"
merged_range = "0.1.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-contrib = { version = "0.10.0", features = [
  "jaeger_json_exporter",
  "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
pbkdf2 = { version = "0.11.0", features = ["std"] }
prost = "0.11"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "0.2", package = "madsim-tokio", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }
tonic = { version = "0.2", package = "madsim-tonic" }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
flume = "0.10.14"
getset = "0.1"
toml = "0.5"
tracing-appender = "0.2"
priority-queue = "1.3.0"
futures = "0.3.25"
sha2 = "0.10.6"
async-stream = "0.3.5"
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["io"] }

[build-dependencies]
tonic-build = { version = "0.2", package = "madsim-tonic-build" }

[dev-dependencies]
mockall = "0.11.3"
rand = "0.8.5"
