[package]
name = "xline"
version = "0.4.1"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Distributed KV storage for metadata"
repository = "https://github.com/xline-kv/Xline"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["KV", "consistency", "metadata"]
categories = ["KV"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.5"
async-trait = "0.1.53"
bytes = "1.4.0"
clap = { version = "3.2.16", features = ["derive"] }
clippy-utilities = "0.1.0"
crossbeam-skiplist = "0.1.1"
curp = { path = "../curp", version = "0.1.0" }
engine = { path = "../engine" }
event-listener = "2.5.2"
futures = "0.3.25"
hyper = "0.14.27"
itertools = "0.12.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
merged_range = "0.1.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-contrib = { version = "0.10.0", features = [
  "jaeger_json_exporter",
  "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
pbkdf2 = { version = "0.11.0", features = ["std"] }
priority-queue = "1.3.0"
prost = "0.11"
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "0.2.23", package = "madsim-tokio", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.5"
tonic = { version = "0.3.0", package = "madsim-tonic" }
tonic-health = "0.9.2"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utils = { path = "../utils", features = ["parking_lot"] }
uuid = { version = "1.1.2", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
xlineapi = { path = "../xlineapi" }

[build-dependencies]
tonic-build = { version = "0.3.0", package = "madsim-tonic-build" }

[dev-dependencies]
etcd-client = "0.12.1"
mockall = "0.11.3"
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25"
test-macros = { path = "../test-macros" }
xline-client = { path = "../xline-client" }
xline-test-utils = { path = "../xline-test-utils" }
