[package]
name = "xlineapi"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline RPC API"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/xlineapi"
categories = ["RPC"]
keywords = ["RPC", "Interfaces"]

[dependencies]
curp-external-api = { path = "../curp-external-api" }
etcd-client = { version = "0.3.0", package = "madsim-etcd-client" }
prost = "0.11"
serde = { version = "1.0.137", features = ["derive"] }
tonic = { version = "0.3.0", package = "madsim-tonic" }

[build-dependencies]
tonic-build = { version = "0.3.0", package = "madsim-tonic-build" }
