[package]
name = "xlineapi"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Xline RPC API"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/xlineapi"
categories = ["RPC"]
keywords = ["RPC", "Interfaces"]

[dependencies]
async-trait = "0.1.53"
curp = { path = "../curp" }
curp-external-api = { path = "../curp-external-api" }
etcd-client = { version = "0.3.0", package = "madsim-etcd-client" }
itertools = "0.12.0"
prost = "0.11"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.37"
tonic = { version = "0.3.0", package = "madsim-tonic" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
tonic-build = { version = "0.3.0", package = "madsim-tonic-build" }

[dev-dependencies]
strum = "0.25"
strum_macros = "0.25"
