[package]
name = "xlinectl"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/xlinectl"
description = "Command line client for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Client"]
keywords = ["Client", "CommandLine"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
clap = { version = "4.3.2", features = ["derive", "string"] }
itertools = "0.10.5"
thiserror = "1.0.37"
tokio = { version = "1", features = ["rt"] }
tonic = "0.9.2"
utils = { path = "../utils" }
xline-client = { path = "../xline-client" }
xlineapi = { path = "../xlineapi" }
