[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

authors = ["DatenLord <dev@datenlord.io>"]
categories = ["tools"]
description = "Benchmark tool for Xline"
keywords = ["benchmark"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/Xline/tree/master/benchmark"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4", features = ["derive"] }
clippy-utilities = "0.2.0"
etcd-client = { version = "0.12.1", features = ["tls"] }
indicatif = "0.17.8"
rand = "0.8.5"
thiserror = "1.0.58"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.1"
utils = { path = "../utils", version = "0.1.0" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xline-client = { path = "../xline-client" }
xline-test-utils = { path = "../xline-test-utils" }
xlineapi = { path = "../xlineapi" }
