[package]
name = "curp-external-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/xline-kv/Xline/tree/master/curp-external-api"
description = "Curp external API"
license = "Apache-2.0"
readme = "README.md"
categories = ["API"]
keywords = ["API", "Curp"]

[dependencies]
async-trait = "0.1.81"
engine = { path = "../engine" }
mockall = "0.12.1"
prost = "0.13"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.61"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
